sim.ai/manifests/realtime-service.yml
apiVersion: v1
kind: Service
metadata:
  name: realtime
  namespace: sim-ai
spec:
  selector:
    app: realtime
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
