sim.ai/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sim-ai-ingress
  namespace: sim-ai
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
  - host: sim-ai.aooba.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sim-ai
            port:
              number: 80
